@@ -1,26 +1,26 @@
 <?php
 /***************************************************************
-* Copyright notice
-*
-* (c) 2010 Oliver Klee <typo3-coding@oliverklee.de>
-* All rights reserved
-*
-* This script is part of the TYPO3 project. The TYPO3 project is
-* free software; you can redistribute it and/or modify
-* it under the terms of the GNU General Public License as published by
-* the Free Software Foundation; either version 2 of the License, or
-* (at your option) any later version.
-*
-* The GNU General Public License can be found at
-* http://www.gnu.org/copyleft/gpl.html.
-*
-* This script is distributed in the hope that it will be useful,
-* but WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-* GNU General Public License for more details.
-*
-* This copyright notice MUST APPEAR in all copies of the script!
-***************************************************************/
+ * Copyright notice
+ *
+ * (c) 2010 Oliver Klee <typo3-coding@oliverklee.de>
+ * All rights reserved
+ *
+ * This script is part of the TYPO3 project. The TYPO3 project is
+ * free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * The GNU General Public License can be found at
+ * http://www.gnu.org/copyleft/gpl.html.
+ *
+ * This script is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
 
 /**
  * Class t3lib_formprotection_Factory.
@@ -34,7 +34,7 @@
  *
  * <pre>
  * $formProtection = t3lib_formprotection_Factory::get(
- *     't3lib_formProtection_BackEnd'
+ *	 't3lib_formProtection_BackEnd'
  * );
  * </pre>
  *
@@ -42,7 +42,7 @@
  *
  * <pre>
  * $formProtection = t3lib_formprotection_Factory::get(
- *     'tx_install_formprotection'
+ *	 'tx_install_formprotection'
  * );
  * $formProtection->injectInstallTool($this);
  * </pre>
@@ -66,7 +66,8 @@ final class t3lib_formprotection_Factory {
 	/**
 	 * Private constructor to prevent instantiation.
 	 */
-	private function __construct() {}
+	private function __construct() {
+	}
 
 	/**
 	 * Gets a form protection instance for the requested class $className.
@@ -75,8 +76,8 @@ final class t3lib_formprotection_Factory {
 	 * existing instance will be returned.
 	 *
 	 * @param string $className
-	 *        the name of the class for which to return an instance, must be
-	 *        "t3lib_formProtection_BackEnd" or "t3lib_formprotection_InstallToolFormProtection"
+	 *		the name of the class for which to return an instance, must be
+	 *		"t3lib_formProtection_BackEnd" or "t3lib_formprotection_InstallToolFormProtection"
 	 *
 	 * @return t3lib_formprotection_Abstract the requested instance
 	 */
@@ -85,7 +86,7 @@ final class t3lib_formprotection_Factory {
 			if (!class_exists($className, TRUE)) {
 				throw new InvalidArgumentException(
 					'$className must be the name of an existing class, but ' .
-						'actually was "' . $className . '".',
+					'actually was "' . $className . '".',
 					1285352962
 				);
 			}
@@ -94,8 +95,8 @@ final class t3lib_formprotection_Factory {
 			if (!$instance instanceof t3lib_formprotection_Abstract) {
 				throw new InvalidArgumentException(
 					'$className must be a subclass of ' .
-						't3lib_formprotection_Abstract, but actually was "' .
-						$className . '".',
+					't3lib_formprotection_Abstract, but actually was "' .
+					$className . '".',
 					1285353026
 				);
 			}
@@ -111,10 +112,10 @@ final class t3lib_formprotection_Factory {
 	 * Note: This function is intended for testing purposes only.
 	 *
 	 * @param string $className
-	 *        the name of the class for which to set an instance, must be
-	 *        "t3lib_formProtection_BackEnd" or "t3lib_formprotection_InstallToolFormProtection"
+	 *		the name of the class for which to set an instance, must be
+	 *		"t3lib_formProtection_BackEnd" or "t3lib_formprotection_InstallToolFormProtection"
 	 * @param t3lib_formprotection_Abstract $instance
-	 *        the instance to set
+	 *		the instance to set
 	 *
 	 * @return void
 	 */
